// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders E ChannelLogo as a default 1`] = `
<Styled(baseIcon)
  height="50"
  type="e"
  width={43.5}
/>
`;

exports[`renders E1 ChannelLogo 1`] = `
<Styled(baseIcon)
  height="50"
  type="e1"
  width={71}
/>
`;

exports[`renders E2 ChannelLogo 1`] = `
<Styled(baseIcon)
  height="50"
  type="e2"
  width={83}
/>
`;
